# or-af

./: .gitignore  CHANGELOG.md  HOW_TO_PUBLISH.md  LICENSE  MANIFEST.in  MONITORING_WORKFLOW.md  PUBLISHING.md  PUBLISHING_STATUS.md  PYPI_CHECKLIST.md  PYPI_PUBLISHING_DETAILS.md  PYPI_REVIEW_SUMMARY.md  QUICKSTART.md  QUICK_WORKFLOW_CHECK.md  README copy.md  README.md  pyproject.toml  setup.py  test_structure.py
.github/workflows/: publish.yml
examples/: advanced_example.ipynb  basic_example.py  framework_example.py  multiagent_workflow.ipynb
or_af/: __init__.py  agent.py  framework.py
tests/: __init__.py  test_agent.py  test_framework.py
